--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for re::engine::PCRE2
 
-0.01 Tue Apr  4 10:44:57 CEST 2017 rurban
+0.01 Wed Apr 5 11:40:18 2017 +0200 rurban
 
-    - Started from re-engine-PCRE
-
+    - Started from re-engine-PCRE.
+    - fixed tests, added backcompat, changed to PCRE2 API and added jit
