stabilize t/config.t and XS
keep the XS stack intact. on internal config errors return undef,
on invalid options croak.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for re::engine::PCRE2
 
 0.07
 
+    - Fix XS stack in case of config() errors
     - Prepare for compile and match contexts (import options)
     - Simplify XS method implementation
     - Add config and method tests
