--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for re::engine::PCRE2
 
+0.08 Tue Apr 11 08:35:51 2017 +0200 rurban
+
+    - Support all older libpcre2 versions.
+      Tested with 10.00, 10.10, 10.20, 10.21, 10.22, 10.23, 10.30-dev
+    - Return undef on unsupported pattern_info methods, not 0:
+      framesize, hasbackslashc
+
 0.07 Mon Apr 10 19:13:52 2017 +0200 rurban
 
     - Fix stack corruption with certain rx size methods on 64bit
