Fix make_nametable heap-buffer-overflow
Wrong inner loop counter with duplicate names, i vs j.
The npar type int was also wrong, change to I32.

Add a couple of assertions, and simplify the code.
Closes GH #10.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for re::engine::PCRE2
 
     - Add the new heaplimit method and config option.
+    - Fixed make_nametable heap-buffer-overflow (#10)
 
 0.09 Tue Apr 11 13:49:30 2017 +0200 rurban
 
