--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for re::engine::PCRE2
 
-    - Support /g anchors: bypass PCRE2, fallback to core.
+0.11 Fri Apr 14 21:49:57 2017 +0200 rurban
+
+    - Support \gG anchors: bypass PCRE2, fallback to core.
+    - Partially support /g global matches, passes now all t/perl/pat.t
+      tests with >= 5.22
     - t/perl/regexp.t: Support testing single tests,
       Support --core argument without loading PCRE2.
 
